--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ VITE_LIFTINGCAST_WEBSOCKET_URL="wss://backup.liftingcast.com/websocket"
 VITE_LIFTINGCAST_MEET_ID=
 VITE_LIFTINGCAST_MEET_PASSWORD=
 VITE_LIFTINGCAST_LIGHTS_OFF_DELAY_SECONDS=3
+VITE_LIFTINGCAST_API_KEY="NA"
+# VITE_LIFTINGCAST_WEBSOCKET_URL="ws://localhost/websocket"
