--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     "start": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "auto-text-size": "^0.2.3",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
+    "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
     "lodash": "^4.17.21",
+    "next": "^15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fitty": "^1.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
@@ -28,6 +34,7 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-react": "^4.2.1",
